# Klapper-Ai

./: DatabaseERDiagram.drawio  README.md  Untitled Diagram.drawio
Database/: Database-Setup.sql  MoveFromTable.sql  QueryAllTableValues.sql
Debug-build/: CMakeCache.txt  KlapperNetwork  Makefile  cmake_install.cmake
Debug-build/.qtc_clangd/: compile_commands.json
Klapper-Ai/KlapperNetworkBuild/: CMakeCache.txt  CMakeCache.txt.prev  KlapperNetwork  KlapperNetwork.cbp  Makefile  cmake_install.cmake
KlapperFiles/: CMakeLists.txt  CMakeLists.txt.user.ad899f2  CMakeLists.txt.user.ba947c1  a.out  backpropagation.cpp  backpropagation.h  commandline.cpp  commandline.h  main.cpp  networkhandler.cpp  networkhandler.h  node.cpp  node.h  node.h.gch  persistence.cpp  persistence.h  traininghandler.cpp  traininghandler.h
Release-bin/: CMakeCache.txt  KlapperNetwork  Makefile  cmake_install.cmake
Release-bin/.qtc_clangd/: compile_commands.json
Trainer/: DataCollector.py
build-KlapperFiles-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
build-klapperBuild-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  KlapperNetwork  KlapperNetwork.cbp  Makefile  cmake_install.cmake
build-klapperBuild-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-klapperBuild-Desktop-Release/: CMakeCache.txt  KlapperNetwork  Makefile  cmake_install.cmake
klapperBuild/: CMakeLists.txt  a.out  backpropagation.cpp  backpropagation.cpp.smDjqU  backpropagation.h  main.cpp  networkhandler.cpp  networkhandler.h  node.cpp  node.h  node.h.gch
(+232 files in other folders)
